# poetry-dependency-audit

./: .gitignore
test/files/: README.txt  pyproject.toml
